<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="alternative">

        <item
            android:id="@+id/action_maps"
            android:icon="@drawable/ic_maps"
            android:title="@string/settings"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings"
            android:orderInCategory="100"
            android:title="@string/settings"
            app:showAsAction="ifRoom" />
    </group>
</menu>